--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>ahoj</p>
     <img src="" alt="">
     <link rel="stylesheet" href="www.facebook.com">
+    <link rel="stylesheet" href="www.google.sk">
 </body>
 </html>
