--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <p>ahoj</p>
     <img src="" alt="">
-    <link rel="stylesheet" href="www.facebook.com">
-    <link rel="stylesheet" href="www.google.sk">
+   <a href="www.google.com">google</a>
+   <a href="wwww.facebook.com">facebook</a>
 </body>
 </html>
