--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body>
     <p>ahoj</p>
     <img src="" alt="">
-   <a href="www.google.com">google</a>
-   <a href="wwww.facebook.com">facebook</a>
+   <a href="www.google.com">Google</a>
 </body>
 </html>
