--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p>ahoj</p>
     <img src="" alt="">
-   <a href="www.google.com">Google</a>
+   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur assumenda voluptatibus eum dolorum voluptatem doloribus quasi deleniti odio cum reiciendis! Consequatur, nesciunt quos? Impedit iusto animi molestias ratione. Aperiam, magnam.</p>
+    <a href="www.google.com">Google</a>
 </body>
 </html>
