--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <img src="" alt="">
    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur assumenda voluptatibus eum dolorum voluptatem doloribus quasi deleniti odio cum reiciendis! Consequatur, nesciunt quos? Impedit iusto animi molestias ratione. Aperiam, magnam.</p>
     <a href="www.google.com">Google</a>
+    <a href="">nic</a>
 </body>
 </html>
